5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4063/executions/1621_2936.log
== TEST (2019-04-01 19:10:52) 
-- CODE:
mP = float input (int"")
mN = float input (int"")
mT = float input (int"")
mV = float input (int"")

-- ERROR:
File "XXXX", line 1
    mP = float input (int"")
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:26:50) 
-- CODE:
mP = float input (int"")
mN = float input (int"")
mT = float input (int"")
mV = float input (int"")
p . V = n . R . T
1 . V = 0.05 . 0,82 . 323,15
print(v)
-- ERROR:
File "XXXX", line 1
    mP = float input (int"")
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:40:33) 
-- CODE:
Volume(v)float(input"volume")
Pressao(p)float(input"pressao")
Nm(n)float(input"mols")
Temperatura(t)float(input"temperatura")
p.V=n.R.T
0.05.V=1.0.082.323,15
V=26.4983/0.05
print(V)
-- ERROR:
File "XXXX", line 1
    Volume(v)float(input"volume")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:52:28) 
-- CODE:
p=float(input("qual a pressao?"))
n=float(input("qual o numero de mols?"))
t=float(input("qual a temperatura?"))
r=0.082
a=(n+R+T)
V=a/p
print(V)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a=(n+R+T)
NameError: name 'R' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:52:29) 
-- CODE:
p=float(input("qual a pressao?"))
n=float(input("qual o numero de mols?"))
t=float(input("qual a temperatura?"))
r=0.082
a=(n+R+T)
V=a/p
print(V)
-- EXECUTION TIME:
0.130629
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2936/main.py", line 5, in <module>
    a=(n+R+T)
NameError: name 'R' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
